Modified Cloud Functions API

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,8 @@ yarn-error.log*
 # Firebase resources
 .firebaserc
 .firebase
+firestore.rules
+src/webhookConfig.js
 src/firebase/config.js
 src_class/firebase/config.js
 
